--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.2.4 
   custom_switch_widget: ^0.0.1
+  flutter_swiper_view: ^1.1.8
 
 dev_dependencies:
   flutter_test:
@@ -60,8 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/pxfuel.jpg
+    - assets/images/temp.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
