--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluttertoast: ^8.2.4 
   custom_switch_widget: ^0.0.1
   flutter_swiper_view: ^1.1.8
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
